# rest-framework-benchmark

./: .gitignore  Makefile  benchmark.sh  main  main.go  process  run-benchmarks.sh  test.sh  test_payload.json
.tools/: Makefile  go.mod  main.go
bun/: server.ts
bun-express/: README.md  bun.lockb  package.json  tsconfig.json
bun-hono/: bun.lockb  package.json
bun-hono/src/: index.ts
cpp-oat/: CMakeLists.txt
cpp-oat/src/: App.cpp  AppComponent.hpp
cpp-oat/src/controller/: Controller.hpp  Dtos.hpp
deno-express/: main.ts
deno-oak/: main.ts
go-fiber/: .gitignore  go.mod  main.go
java-spring/: pom.xml
java-spring/src/main/java/in/hanutsingh/simplerest/: LoginRequest.java  LoginResponse.java  SimplerestApplication.java  SimplerestController.java
java-spring/src/main/resources/: application.properties
nest-express/: package.json  pnpm-lock.yaml
nest-express/src/: app.controller.ts  app.module.ts  app.service.ts  logger.middleware.ts  main.ts
nest-fastify/: package.json  pnpm-lock.yaml
nest-fastify/src/: logger.service.ts  main.ts
nest-fastify/src/dtos/: login.dto.ts
node/: package-lock.json  package.json  server.ts  tsconfig.json
node-express/: server.ts
node-fastify/: package-lock.json  package.json  server.ts
results/: actix-100k-result.txt  actix-1m-result.txt  bun-100k-result.txt  bun-1m-result.txt  cppoat-100k-result.txt  cppoat-1m-result.txt  gofiber-100k-result.txt  gofiber-1m-result.txt  nest-express-100k-result.txt  node-100k-result.txt  node-1m-result.txt
rust-actix/: Cargo.toml
rust-actix/src/: main.rs
(+1 files in other folders)
